--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -1,15 +1,14 @@
+/* Styles for all screens */
 .container {
   display: flex;
   flex-direction: row;
   background-color: black;
-  /* border-color: aliceblue;
-  border: 3px solid; */
   height: var(--nav-height);
   align-items: center;
 }
 
 .link-list {
-  width: 300vh;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -23,7 +22,6 @@
 }
 
 .link {
-  /* font-family: cursive; */
   font-size: 30px;
   display: table-cell;
   vertical-align: middle;
@@ -46,6 +44,24 @@
 
 ul.link-list {
   border-bottom: 5px solid rgb(143, 0, 0);
-  /* padding: 5px; */
   margin: 15px;
+}
+
+/* Styles for screens up to 600px (smartphones) */
+@media (max-width: 600px) {
+  .link {
+    font-size: 18px;
+  }
+}
+
+/* Styles for screens between 601px and 1024px (tablets) */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .link {
+    font-size: 24px;
+  }
+}
+
+/* Styles for screens 1025px and above (desktops) */
+@media (min-width: 1025px) {
+  /* The original styles will apply for desktop screens */
 }
