--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,7 @@
 
 * {
   box-sizing: border-box;
+  --nav-height: 50px;
   padding: 0;
   margin: 0;
 }
@@ -86,6 +87,7 @@ body {
 }
 
 body {
+  padding-top: var(--nav-height);
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
