--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -1,19 +1,39 @@
-/* Styles for all screens */
 .container {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   background-color: black;
   height: var(--nav-height);
-  align-items: center;
+  position: relative;
+  border-bottom: 5px solid rgb(143, 0, 0);
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+.logo-div {
+  margin-left: 35px;
+  /* margin-right: 35px;
+  display: flex;
+  align-items: center; */
+}
+
+.logo-navbar img {
+  display: block;
+  width: 40px;
+  height: 40px;
 }
 
 .link-list {
-  width: 100%;
-  height: 100%;
+  flex: 1;
   display: flex;
-  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  /* border-bottom: 5px solid rgb(143, 0, 0); */
+  margin: 15px;
+  height: 100%;
 }
 
 .list-item {
@@ -22,9 +42,9 @@
 }
 
 .link {
-  font-size: 30px;
   display: table-cell;
   vertical-align: middle;
+  font-size: 30px;
   color: white;
   text-decoration: none;
   height: 100%;
@@ -40,11 +60,6 @@
 
 .current {
   color: rgb(143, 0, 0);
-}
-
-ul.link-list {
-  border-bottom: 5px solid rgb(143, 0, 0);
-  margin: 15px;
 }
 
 /* Styles for screens up to 600px (smartphones) */
