--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,8 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 255, 255;
+  /* --background-start-rgb: 214, 219, 220; */
   --background-end-rgb: 255, 255, 255;
 
   --primary-glow: conic-gradient(
@@ -42,7 +43,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    /* --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
@@ -52,7 +53,7 @@
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0.3)
-    );
+    ); */
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
@@ -76,6 +77,8 @@
 * {
   box-sizing: border-box;
   --nav-height: 50px;
+  --sidebar-width-closed: 60px;
+  --sidebar-width-open: 110px;
   padding: 0;
   margin: 0;
 }
@@ -87,7 +90,9 @@ body {
 }
 
 body {
-  padding-top: var(--nav-height);
+  /* padding-top: var(--nav-height); */
+  padding-left: var(--sidebar-width-closed);
+  transition: padding-left 0.3s ease;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -95,6 +100,19 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+body.sidebar-open {
+  padding-left: var(--sidebar-width-open);
+}
+
+main {
+  transition: margin-left 0.3s ease;
+  margin-left: var(--sidebar-width-closed);
+}
+
+body.sidebar-open main {
+  margin-left: var(--sidebar-width-open);
 }
 
 a {
