--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -1,47 +1,47 @@
 .container {
-  display: flex;
-  align-items: center;
-  background-color: black;
-  height: var(--nav-height);
+  /* display: flex; */
+  /* align-items: center; */
+  /* background-color: black; */
+  /* height: var(--nav-height);
   position: relative;
-  border-bottom: 5px solid rgb(143, 0, 0);
+  border-bottom: 5px solid rgb(143, 0, 0); */
 
-  position: fixed;
+  /* position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 1000; */
 }
 
-.logo-div {
+/* .logo-div {
   margin-left: 35px;
-  /* margin-right: 35px;
+  margin-right: 35px;
   display: flex;
-  align-items: center; */
-}
+  align-items: center;
+} */
 
-.logo-navbar img {
+/* .logo-navbar img {
   display: block;
   width: 40px;
   height: 40px;
-}
+} */
 
-.link-list {
+/* .link-list {
   flex: 1;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  /* border-bottom: 5px solid rgb(143, 0, 0); */
+  border-bottom: 5px solid rgb(143, 0, 0);
   margin: 15px;
   height: 100%;
-}
+} */
 
-.list-item {
+/* .list-item {
   display: table;
   height: 100%;
-}
+} */
 
-.link {
+/* .link {
   display: table-cell;
   vertical-align: middle;
   font-size: 30px;
@@ -50,17 +50,17 @@
   height: 100%;
   border-bottom: 0 solid white;
   transition: all 300ms;
-}
+} */
 
-.link:hover {
+/* .link:hover {
   color: rgb(143, 0, 0);
   border-bottom: 5px solid white;
   transition: all 300ms;
-}
+} */
 
-.current {
+/* .current {
   color: rgb(143, 0, 0);
-}
+} */
 
 /* Styles for screens up to 600px (smartphones) */
 @media (max-width: 600px) {
