--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+/* global.css */
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -39,6 +40,10 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
+  --nav-height: 50px;
+  --sidebar-width-closed: 60px;
+  --sidebar-width-open: 110px; /* Adjust this as per your sidebar width */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -76,9 +81,6 @@
 
 * {
   box-sizing: border-box;
-  --nav-height: 50px;
-  --sidebar-width-closed: 60px;
-  --sidebar-width-open: 110px;
   padding: 0;
   margin: 0;
 }
@@ -90,8 +92,7 @@ body {
 }
 
 body {
-  /* padding-top: var(--nav-height); */
-  padding-left: var(--sidebar-width-closed);
+  /* padding-left: var(--sidebar-width-closed); */
   transition: padding-left 0.3s ease;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -103,12 +104,12 @@ body {
 }
 
 body.sidebar-open {
-  padding-left: var(--sidebar-width-open);
+  /* padding-left: var(--sidebar-width-open); */
 }
 
 main {
-  transition: margin-left 0.3s ease;
   margin-left: var(--sidebar-width-closed);
+  transition: margin-left 0.3s ease;
 }
 
 body.sidebar-open main {
