--- a/app/globals.css
+++ b/app/globals.css
@@ -41,14 +41,14 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 
-  --nav-height: 50px;
+  /* --nav-height: 50px; */
   --sidebar-width-closed: 60px;
   --sidebar-width-open: 110px; /* Adjust this as per your sidebar width */
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
-    /* --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
@@ -58,7 +58,7 @@
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0.3)
-    ); */
+    );
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
@@ -77,7 +77,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -85,15 +85,29 @@
   margin: 0;
 }
 
+.content-container {
+  margin-right: var(--sidebar-width-closed);
+  transition: margin-right 0.3s ease;
+  width: calc(100% - var(--sidebar-width-closed));
+}
+
+body.sidebar-open .content-container {
+  margin-right: var(--sidebar-width-open);
+  width: calc(100% - var(--sidebar-width-open));
+  transition: margin-right 0.3s ease;
+}
+
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+
+  /* height: 100vw; */
+  /* overflow-x: hidden; */
 }
 
 body {
-  /* padding-left: var(--sidebar-width-closed); */
-  transition: padding-left 0.3s ease;
+  position: relative;
+  transition: padding-right 0.3s ease;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -103,26 +117,13 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-body.sidebar-open {
-  /* padding-left: var(--sidebar-width-open); */
-}
-
-main {
-  margin-left: var(--sidebar-width-closed);
-  transition: margin-left 0.3s ease;
-}
-
-body.sidebar-open main {
-  margin-left: var(--sidebar-width-open);
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
