login and log out design

--- a/app/auth/login/Login.module.css
+++ b/app/auth/login/Login.module.css
@@ -1,19 +1,43 @@
 .container {
-  /* background-image: url("/pics/round-logo.png"); */
-  background-size: cover;
+  background-image: url("/sg-logo.svg");
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #dbd5e6;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(240, 248, 255, 0.9);
+  border-radius: 16px;
+  width: 300px;
+  height: 150px;
+  margin: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .title {
-  color: white;
+  /* color: #91229a;
   font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  font-family: var(--font-mono); */
+  font-family: var(--font-mono);
+  font-size: 17px;
+  /* font-weight: 700; */
+  /* margin-top: 20px; */
+  margin-bottom: 15px;
 }
 
-.button {
+/* .button {
   background-color: white;
   color: black;
   padding: 1rem 2rem;
@@ -27,4 +51,32 @@
 .signInButton {
   background-color: #4285f4;
   color: white;
+} */
+
+.button {
+  max-width: 320px;
+  display: flex;
+  padding: 0.5rem 1.4rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 2rem;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  gap: 0.75rem;
+  color: rgb(65, 63, 63);
+  background-color: #fff;
+  cursor: pointer;
+  transition: all 0.6s ease;
+}
+
+.button svg {
+  height: 24px;
+}
+
+.button:hover {
+  transform: scale(1.03);
 }
