--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,4 +1,4 @@
-/* components/Header.module.css */
+/* 
 .header {
   position: fixed;
   top: 0;
@@ -21,4 +21,4 @@
 
 .logo {
   transition: width 0.3s ease, height 0.3s ease;
-}
+} */
