--- a/components/sidebar/sidebar.css
+++ b/components/sidebar/sidebar.css
@@ -1,4 +1,3 @@
-/* Sidebar container styling */
 .container {
   display: flex; /* Use flexbox layout */
   align-items: center; /* Center items along the cross axis */
@@ -22,8 +21,6 @@
 body.sidebar-open .container {
   width: var(--sidebar-width-open);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-  /* width: var(--sidebar-width-open);  */
 }
 
 /* Scale the logo on hover or when the sidebar is open */
@@ -78,40 +75,25 @@ img.logo-sidebar:hover {
 .link:hover {
   color: rgb(17, 0, 86); /* New color on hover */
   transition: color 0.3s ease; /* Smooth transition for color change */
-  /* border-bottom: 5px solid rgb(133, 49, 252); */
-  /* border-top: 5px solid rgb(133, 49, 252); */
-  /* border-radius: 5px 5px 5px; */
 }
 
-/* .link:hover .link-text {
-  text-decoration: underline;
-  text-decoration-color: rgb(17, 0, 86);
-  text-decoration-style: dashed;
-  text-decoration-thickness: 2px;
-} */
-
-/* .link.current {
-  background-color: rgb(133, 49, 252);
-  color: white;
-  border-radius: 5px;
-  padding: calc(--sidebar-width-open);
-} */
-
 .link.current .link-icon {
-  background-color: #0fc4bf;
+  background-color: #f0eafb;
   border-radius: 25%;
   padding: 5px;
   filter: none;
 }
 
 .link:hover .link-icon img {
-  filter: brightness(1.2) contrast(1.2) saturate(1.5)
-    drop-shadow(5px 5px 0 rgba(0, 0, 0, 0.3));
+  filter: brightness(1.2) contrast(1.2) saturate(1.5);
 }
-
+.link:hover .link-icon {
+  background-color: #f0eafb;
+  border-radius: 25%;
+  padding: 5px;
+}
 .link.current .link-icon img {
-  filter: brightness(1.2) contrast(1.2) saturate(1.5)
-    drop-shadow(5px 5px 0 rgba(0, 0, 0, 0.3));
+  filter: brightness(1.2) contrast(1.2) saturate(1.5);
 }
 
 /* Icon styling inside the link */
@@ -129,8 +111,6 @@ img.logo-sidebar:hover {
   transition: opacity 0.3s ease, transform 0.3s ease; /* Smooth transition for appearance */
   height: 0; /* Initial height */
   overflow: hidden; /* Hide overflow content */
-  /* margin-top: 5px; 
-  padding-top: 50px; */
   position: absolute; /* Absolute positioning */
   bottom: 35px; /* Position below the icon */
 }
