--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-/* global.css */
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap");
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -95,6 +95,7 @@ body.sidebar-open .content-container {
   margin-right: var(--sidebar-width-open);
   width: calc(100% - var(--sidebar-width-open));
   transition: margin-right 0.3s ease;
+  /* font-family: heebo; */
 }
 
 html,
@@ -106,6 +107,7 @@ body {
 }
 
 body {
+  font-family: "Heebo", sans-serif !important;
   position: relative;
   transition: padding-right 0.3s ease;
   color: rgb(var(--foreground-rgb));
