--- a/app/auth/login/Login.module.css
+++ b/app/auth/login/Login.module.css
@@ -16,12 +16,16 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(240, 248, 255, 0.9);
+  background: #ffffffcc;
+
   border-radius: 16px;
   width: 300px;
   height: 150px;
   margin: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px 4px rgba(0, 0, 0, 0.25); */
+  box-shadow: 0px 4px 4px 0px #00000040;
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
 }
 
 .title {
