--- a/components/heroSection/heroSection.css
+++ b/components/heroSection/heroSection.css
@@ -1,22 +1,17 @@
-/* HeroSection.css */
 .hero-section {
   position: relative;
-  /* background: linear-gradient(180deg, #f0eafb 0%, #d7d0e1 100%); */
-  padding: 60px;
+  padding-right: 20px;
+  padding-bottom: 30px;
   overflow: hidden;
   background-color: #dbd5e6;
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
 .hero-content {
   display: flex;
-  /* margin-top: 50px; */
   gap: 40px;
-
   align-items: center;
-  /* background-image: url("../../public/circle.svg");
-  background-repeat: no-repeat;
-  background-position: left; */
-  /* background-size: cover; */
 }
 
 .image-column {
@@ -31,19 +26,17 @@
 
 .purple-circle {
   position: absolute;
-  /* top: 50%;
-  left: 50%; */
-  transform: translate(-35%, -10%);
-  width: 170%;
+  transform: translate(0%, -10%);
+  /* width: 170%; */
   height: auto;
   z-index: 50;
 }
 img.purple-circle {
   position: absolute;
   top: 70;
-  left: 50;
-  width: 90%;
-  height: 90%;
+  left: 70;
+  width: 40%;
+  /* height: 90%; */
   object-fit: contain;
   z-index: 1;
 }
@@ -70,14 +63,10 @@ img.screen-image {
 .site-title {
   font: 700 60px/1.2 "Heebo", sans-serif;
   color: #91229a;
-  /* margin-bottom: 40px; */
-  /* margin-bottom: -50px; */
-  /* margin-top: 80px; */
   text-align: right;
 }
 
 .features-grid {
-  /* display: grid; */
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   margin-bottom: 40px;
@@ -115,36 +104,8 @@ img.screen-image {
   cursor: pointer;
 }
 
-/* img.logo {
-  width: 100px;
-  height: 100px;
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
-/* 
-@media (max-width: 991px) {
-  .hero-section {
-    padding: 40px 20px;
-  }
-
-  .hero-content {
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .title {
-    font-size: 40px;
-  }
-
-  .features-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .cta-button {
-    padding: 14px;
-    white-space: normal;
-  }
-} */
+img.logo {
+  width: 211px;
+  position: relative;
+  left: calc(50vw - var(--sidebar-width-closed));
+}
