--- a/components/heroSection/heroSection.css
+++ b/components/heroSection/heroSection.css
@@ -1,11 +1,10 @@
 .hero-section {
   position: relative;
   padding-right: 20px;
-  padding-bottom: 30px;
+  padding-top: 30px;
   overflow: hidden;
   background-color: #dbd5e6;
   max-height: 100vh;
-  overflow-y: auto;
 }
 
 .hero-content {
@@ -20,22 +19,22 @@
 
 .image-wrapper {
   position: relative;
-  width: 100%;
-  padding-top: 100%;
+  /* width: 100%; */
+  padding-top: 80%;
 }
 
 .purple-circle {
   position: absolute;
-  transform: translate(0%, -10%);
+  transform: translate(0%, -40%);
   /* width: 170%; */
-  height: auto;
+  /* height: auto; */
   z-index: 50;
 }
 img.purple-circle {
   position: absolute;
   top: 70;
   left: 70;
-  width: 40%;
+  width: 35%;
   /* height: 90%; */
   object-fit: contain;
   z-index: 1;
@@ -43,11 +42,11 @@ img.purple-circle {
 
 img.screen-image {
   position: absolute;
-  transform: translate(-5%, -10%);
+  transform: translate(15%, -20%);
   top: 0;
   left: 0;
-  width: 150%;
-  height: 150%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
   z-index: 10;
 }
@@ -61,9 +60,13 @@ img.screen-image {
 }
 
 .site-title {
-  font: 700 60px/1.2 "Heebo", sans-serif;
+  /* font: "Heebo", sans-serif; */
+  position: relative;
+  font-size: clamp(1.5rem, 3.5vw, 4.25rem);
+  line-height: calc(1.1em + 0.5vw);
   color: #91229a;
   text-align: right;
+  z-index: 1000;
 }
 
 .features-grid {
@@ -80,21 +83,24 @@ img.screen-image {
 }
 
 .feature-icon {
-  width: 44px;
-  height: 44px;
+  width: clamp(1.5rem, 3vw, 2.5rem);
+  height: clamp(1.5rem, 3vw, 2.5rem);
 }
 
 .feature-text {
-  font: 500 24px/1.2 "Heebo", sans-serif;
+  /* font: 500 24px/1.2 "Heebo", sans-serif; */
+  font-size: clamp(0.875rem, 2.5vw, 1.5rem);
+  line-height: calc(1.2em + 0.3vw);
   color: #333;
 }
 
 .cta-button {
   background: linear-gradient(341deg, #351568 -7.4%, #692ace 91.35%);
   color: #fff;
-  font: 700 22px "Heebo", sans-serif;
-  padding: 14px 60px;
-  border-radius: 35px;
+  font-family: "Heebo", sans-serif;
+  font-size: clamp(0.75rem, 2.5vw, 1.2rem);
+  padding: 0.8em 3.5em;
+  border-radius: 2em;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   letter-spacing: 1.15px;
   transition: background-color 0.3s ease;
@@ -105,7 +111,25 @@ img.screen-image {
 }
 
 img.logo {
-  width: 211px;
+  width: 190px;
   position: relative;
   left: calc(50vw - var(--sidebar-width-closed));
 }
+/* 
+@media screen and (max-width: 768px) {
+  .site-title {
+    font-size: 1.75rem;
+  }
+  .feature-text {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .site-title {
+    font-size: 1.5rem;
+  }
+  .feature-text {
+    font-size: 0.875rem;
+  }
+} */
