--- a/components/sidebar V2/sidebar.css
+++ b/components/sidebar V2/sidebar.css
@@ -106,4 +106,5 @@ img.logo-sidebar:hover {
 body.sidebar-open .link-text {
   opacity: 1;
   transition: opacity 0.3s ease;
+  padding-right: 4px;
 }
