--- a/components/heroSection/heroSection.css
+++ b/components/heroSection/heroSection.css
@@ -4,17 +4,18 @@
   padding-top: 30px;
   overflow: hidden;
   background-color: #dbd5e6;
-  max-height: 100vh;
+  height: 100vh;
 }
 
 .hero-content {
   display: flex;
   gap: 40px;
-  align-items: center;
+  align-items: flex-start;
+  /* margin-top: 15px; */
 }
 
 img.logo {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   width: 190px;
   position: relative;
   left: calc(50vw - var(--sidebar-width-closed));
@@ -69,7 +70,7 @@ img.screen-image {
 .site-title {
   /* font: "Heebo", sans-serif; */
   position: relative;
-  font-size: clamp(1.5rem, 3.5vw, 4.25rem);
+  font-size: clamp(1.5rem, 3.2vw, 4rem);
   line-height: calc(1.1em + 0.5vw);
   color: #91229a;
   text-align: right;
@@ -77,9 +78,20 @@ img.screen-image {
 }
 
 .features-grid {
+  display: flex;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  flex-direction: column;
+  align-content: space-between;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  /* display: flex;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   margin-bottom: 40px;
+  justify-content: start; */
 }
 
 .feature {
@@ -128,6 +140,10 @@ img.screen-image {
 
   .hero-content {
     flex-direction: column;
+    justify-content: center;
+    gap: 79px;
+    align-items: center;
+    margin-top: 74px;
     /* gap: 20px; */
   }
 
@@ -141,7 +157,7 @@ img.screen-image {
 
   .content-column {
     order: 1;
-    text-align: center;
+    text-align: right;
   }
 
   .site-title {
@@ -157,24 +173,27 @@ img.screen-image {
   }
 
   img.purple-circle {
-    margin-top: 40px;
-    width: 50vw;
-    height: 10%;
+    margin-top: 33px;
+    width: 100vw;
+    /* height: 70%; */
+    max-width: 124% !important;
     object-fit: contain;
-
     transform: translate(0%, 0%);
-    top: -10vh;
-    left: -25vw;
+    top: -13vh;
+    left: -22vw;
     /* width: 100%; */
     /* height: 100%; */
   }
 
-  .screen-image {
-    /* position: relative; */
-    /* width: 80%; */
-    /* height: auto; */
-    /* margin: 0 auto; */
-    /* z-index: 2; */
+  img.screen-image {
+    position: absolute;
+    /* transform: translate(15%, -20%); */
+    /* top: 1px; */
+    left: -23vw;
+    width: 174%;
+    height: 168%;
+    object-fit: contain;
+    z-index: 10;
   }
 
   .features-grid {
