--- a/app/accessibility/page.css
+++ b/app/accessibility/page.css
@@ -1,3 +1,5 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap"); */
+
 .accessibility-page {
   max-width: 100vw;
   margin: 0 auto;
@@ -10,11 +12,11 @@
   border-radius: 5px;
 }
 
-.accessibility-page h1 {
-  font-size: 36px;
-  margin-bottom: 30px;
-  color: #4a4a4a;
-  font-weight: 700;
+.accessibility-page .content {
+  background-color: #dbd5e6;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .accessibility-page h2 {
@@ -52,11 +54,4 @@
 
 .accessibility-page a:hover {
   text-decoration: underline;
-}
-
-.accessibility-page .content {
-  background-color: #dbd5e6;
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
