--- a/app/globals.css
+++ b/app/globals.css
@@ -131,12 +131,13 @@ body {
   position: relative;
   transition: padding-right 0.3s ease;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  background-color: #ece6f7;
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
 
 a {
