--- a/components/dashboard/dashboard.css
+++ b/components/dashboard/dashboard.css
@@ -1,30 +1,54 @@
+/* dashboard.css */
+.dashboard-page {
+  height: 100vh;
+  overflow: hidden;
+}
+.dashboard-page,
+.dashboard-container,
+.dashboard-wrapper {
+  width: 100%;
+  height: 100%;
+}
+body,
+.dashboard-page,
+.dashboard-container,
+.dashboard-wrapper {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
 .dashboard-container {
   position: fixed;
   top: 0;
   right: var(--sidebar-width-closed);
-  bottom: 0;
   width: calc(100% - var(--sidebar-width-closed));
   height: 100%;
   transition: right 0.3s ease-in-out, width 0.3s ease-in-out;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dashboard-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dashboard {
-  width: 100%;
-  height: 100%;
+  width: 1366px;
+  height: 768px;
   border: none;
   margin: 0;
   padding: 0;
-  transition: width 0.3s ease-in-out;
-  /* position: absolute;
-  left: -9999px; */
+  transform-origin: top left;
 }
 
-body.sidebar-open .dashboard-container {
+/* body.sidebar-open .dashboard-container {
   right: var(--sidebar-width-open);
   width: calc(100% - var(--sidebar-width-open));
-}
-
-.dashboard-div {
-  transition: width 0.3s ease-in-out;
-}
+} */
