--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -36,19 +36,6 @@
   display: flex;
 }
 
-/* .social-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #6b46c1;
-  margin: 0 0.5rem;
-  color: #1a202c;
-  transition: background-color 0.3s ease;
-} */
-
 .social-icon {
   width: 30px;
   height: 30px;
@@ -71,7 +58,7 @@
 
 @media (max-width: 767px) {
   .footer-container {
-    /* flex-direction: column-reverse; */
+    flex-direction: column-reverse;
     padding: 0.5rem 0;
   }
 
@@ -81,8 +68,8 @@
 }
 .accessibility {
   position: relative;
-  color: #dbd5e6; /* צבע סגול בהיר */
-  text-decoration: none; /* להסיר את הקו התחתון המובנה */
+  color: #dbd5e6;
+  text-decoration: none;
   transition: color 0.3s ease;
 }
 
@@ -90,15 +77,14 @@
   content: "";
   position: absolute;
   right: 0;
-  bottom: -2px; /* מרחק קטן מתחת לטקסט */
-  width: 0;
-  height: 2px; /* גובה הקו */
-  background-color: #dbd5e6; /* צבע הקו */
+  bottom: -2px;
+  height: 2px;
+  background-color: #dbd5e6;
   transition: width 0.3s ease;
 }
 
 .accessibility:hover {
-  color: #dbd5e6; /* שינוי צבע הטקסט בעת ריחוף */
+  color: #dbd5e6;
 }
 
 .accessibility:hover::after {
