Add DataPreview component and styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,8 @@
   --input-border: #e2e2e2;
   --main-background-color: #ECE6F7;
   --secondary-background-color: #F7F5FA;
+  --light-bg-color: #fff;
+  --table-border: #444;
 }
 
 /* 
