--- a/app/globals.css
+++ b/app/globals.css
@@ -44,9 +44,13 @@
 
   --input-border: #e2e2e2;
   --main-background-color: #ECE6F7;
-  --secondary-background-color: #F7F5FA;
+  --secondary-background-color: #F8F4FD;
   --light-bg-color: #fff;
   --table-border: #444;
+}
+
+body {
+  margin: 0;
 }
 
 /* 
@@ -93,7 +97,7 @@
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: 1fr auto;
-  /* min-height: 100vh; */
+  min-height: 100vh;
 }
 
 .content-container {
@@ -146,6 +150,18 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h2.feature-text {
+  position: absolute;
+  right: 50px;
+  font-weight: 500;
+}
+
+h3 {
+  .upload-form & {
+    font-weight: 500;
+  }
 }
 
 .rtl-text {
