--- a/components/data-preview/DataPreview.css
+++ b/components/data-preview/DataPreview.css
@@ -2,10 +2,12 @@
     background-color: var(--light-bg-color);
     border: 1px solid var(--table-border);
     border-collapse: collapse;
+
+    font-size: .85rem;
 }
 
 th,
 td {
     border: 1px solid var(--table-border);
-    padding: 8px;
+    padding: 5px;
 }
