--- a/components/survey-data/SurveyData.css
+++ b/components/survey-data/SurveyData.css
@@ -1,6 +1,16 @@
+.survey-form {
+    padding: 0 2em;
+}
+
+.survey-data-section {
+    width: 600px;
+}
+
 .survey-data-status {
     display: flex;
     gap: .5em;
+    margin-block-start: .5em;
+
     align-items: center;
     color: var(--color-green);
 }
@@ -9,4 +19,10 @@
     display: flex;
     gap: 1em;
     align-items: center;
+}
+
+.data-input {
+    display: flex;
+    align-items: center;
+    gap: 1em;
 }
